--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,7 +73,7 @@ img { max-width: 100%; }
 	height: 50px;
 	margin: 5px;
 	padding: 0 20px;
-	background-image: linear-gradient(45deg, #874da2 0%, #c43a30 100%);
+	background: #ff8300;
 	border: 0;
 	font-size: 15px;
     font-weight: 400;
@@ -81,7 +81,12 @@ img { max-width: 100%; }
     color: #fff;
     -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
 }
-.btn-link-1:hover, .btn-link-1:focus, .btn-link-1:active { outline: 0; background: #3bacae; color: #fff; }
+.btn-link-1:hover, .btn-link-1:focus, .btn-link-1:active { outline: 0; border: 1px solid #f74e00;
+	outline: 0;background: #ff8300; /* Old browsers */
+	background: -moz-linear-gradient(top, #ff8300 0%, #f74e00 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #ff8300 0%,#f74e00 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #ff8300 0%,#f74e00 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8300', endColorstr='#f74e00',GradientType=0 ); /* IE6-9 */ color: white; }
 
 .btn-link-1 i { padding-left: 5px; vertical-align: middle; font-size: 20px; line-height: 20px; }
 
@@ -90,8 +95,8 @@ img { max-width: 100%; }
 	height: 50px;
 	margin: 5px;
 	padding: 0 20px;
-	background-image: linear-gradient(45deg, #874da2 0%, #c43a30 100%);
-	border: 0;
+	background: #ff8300;
+	border: 1px solid transparent;
 	font-size: 15px;
     font-weight: 400;
     line-height: 50px;
@@ -99,7 +104,13 @@ img { max-width: 100%; }
     -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
 }
 .btn-link-2:hover, .btn-link-2:focus,
-.btn-link-2:active, .btn-link-2:active:focus { outline: 0; background: #ff8300; color: #fff; }
+.btn-link-2:active, .btn-link-2:active:focus {
+	border: 1px solid #f74e00;
+	outline: 0;background: #ff8300; /* Old browsers */
+	background: -moz-linear-gradient(top, #ff8300 0%, #f74e00 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #ff8300 0%,#f74e00 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #ff8300 0%,#f74e00 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8300', endColorstr='#f74e00',GradientType=0 ); /* IE6-9 */ color: white; }
 
 .btn-link-2 i { padding-left: 5px; vertical-align: middle; font-size: 20px; line-height: 20px; }
 
@@ -153,6 +164,10 @@ img { max-width: 100%; }
 
 /***** Top menu *****/
 
+.navbar-inverse .navbar-toggle .icon-bar {
+	background: #c43a30;
+}
+
 .navbar {
 	margin-bottom: 0;
 	padding-top: 0;
@@ -165,7 +180,9 @@ img { max-width: 100%; }
 
 ul.navbar-nav { font-size: 15px; color: #fff; }
 
-.navbar-inverse ul.navbar-nav li a { color: #fff; color: #666666; border: 0; }
+.navbar-inverse ul.navbar-nav li a { color: #fff; color: #666666; }
+.navbar-inverse ul.navbar-nav .dropdown-menu a { border: 0;display: inline-block;  width: 30%;}
+
 .navbar-inverse ul.navbar-nav li a:hover { color: #b3853f; border: 0; }
 .navbar-inverse ul.navbar-nav li a:focus { color: #b3853f; outline: 0; border: 0; }
 
@@ -173,8 +190,8 @@ ul.navbar-nav { font-size: 15px; color: #fff; }
 	display: inline-block;
 	margin: 9px 0 0 15px;
 	padding: 6px 15px;
-	background-image: linear-gradient(45deg, #874da2 0%, #c43a30 100%);
-	border: 0;
+	background: #ff8300;
+	border: 1px solid transparent;
 	font-size: 15px;
     font-weight: 400;
     color: #fff;
@@ -183,7 +200,12 @@ ul.navbar-nav { font-size: 15px; color: #fff; }
 .navbar-inverse ul.navbar-nav li a.btn-link-3:hover,
 .navbar-inverse ul.navbar-nav li a.btn-link-3:focus,
 .navbar-inverse ul.navbar-nav li a.btn-link-3:active,
-.navbar-inverse ul.navbar-nav li a.btn-link-3:active:focus { outline: 0; background: #b3853f; color: #fff; }
+.navbar-inverse ul.navbar-nav li a.btn-link-3:active:focus { outline: 0; border: 1px solid #f74e00;
+	outline: 0;background: #ff8300; /* Old browsers */
+	background: -moz-linear-gradient(top, #ff8300 0%, #f74e00 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #ff8300 0%,#f74e00 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #ff8300 0%,#f74e00 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8300', endColorstr='#f74e00',GradientType=0 ); /* IE6-9 */ color: white; }
 
 .navbar-brand {
 	width: 90px;
@@ -195,7 +217,7 @@ ul.navbar-nav { font-size: 15px; color: #fff; }
 
 /***** Top content *****/
 
-.top-content { padding: 180px 0 130px 0; }
+.top-content { padding: 180px 0 10px 0; }
 
 .top-content .text { padding-top: 120px; color: #fff; }
 .top-content .text h1 { color: #fff; }
@@ -298,15 +320,56 @@ ul.navbar-nav { font-size: 15px; color: #fff; }
 .features-box:hover { background: #f8f8f8; }
 
 .features-box .features-box-icon {
-	width: 120px; height: 120px; margin: 0 auto; font-size: 64px; color: #deaa5c; line-height: 120px;
-	background: #f8f8f8; border: 1px solid #fff;
-	-moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%;
+	width: 250px; margin: 0 auto; font-size: 64px; color: #deaa5c; border: 1px solid #fff;
+	-moz-border-radius: 15px; -webkit-border-radius: 15px; border-radius: 15px;
 	-o-transition: all .6s; -moz-transition: all .6s; -webkit-transition: all .6s; -ms-transition: all .6s; transition: all .6s;
 }
-.features-box:hover .features-box-icon { border-color: #deaa5c; }
+.features-box:hover .features-box-icon img { border-color: #deaa5c; }
+.features-box a{
+	color: #555;
+	text-decoration: none;
+}
+
+.features-box:hover a{
+	color:#ff8300;
+}
+
+.features-box .features-box-icon img{
+	border: 1px solid #fff;
+	-moz-border-radius: 15px; -webkit-border-radius: 15px; border-radius: 15px;
+}
 
 .features-box h3 { margin-top: 15px; }
 
+.categories{
+	background: #f8f8f8;
+}
+
+.categories .features-box img{
+	z-index: -1;
+}
+.categories .features-box-icon{
+	height: 200px;
+}
+.categories .features-box .holder{
+	background:  rgba(255,255,255,0.6);
+	position: absolute;
+	width: 250px;
+	max-width: 100%;
+	height: 210px;
+	z-index: 10000;
+	top: 0px;
+	display: none;
+
+}
+
+.categories .features-box:hover .holder{
+	display: block;
+	font-size: 64px;
+	line-height: 200px;
+	text-align: center;
+	animation-name: fadeInUp;
+}
 
 /***** More features *****/
 
