--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,7 +172,7 @@ img { max-width: 100%; }
 .navbar {
 	margin-bottom: 0;
 	padding-top: 0;
-	background:linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+	background:#deaa5c;
 	border-bottom:1px solid #deaa5c;
 	-moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0;
 	-o-transition: all .6s; -moz-transition: all .6s; -webkit-transition: all .6s; -ms-transition: all .6s; transition: all .6s;
@@ -181,11 +181,12 @@ img { max-width: 100%; }
 
 ul.navbar-nav { font-size: 15px; color: #fff; }
 
-.navbar-inverse ul.navbar-nav li a { color: #fff; color: #666666; }
+.navbar-inverse ul.navbar-nav li a { color: #fff; }
+.navbar-no-bg ul.navbar-nav li a{color: #666666;}
 .navbar-inverse ul.navbar-nav .dropdown-menu a { border: 0;display: inline-block;  width: 30%;}
 
-.navbar-inverse ul.navbar-nav li a:hover { color: #b3853f; border: 0; }
-.navbar-inverse ul.navbar-nav li a:focus { color: #b3853f; outline: 0; border: 0; }
+.navbar-inverse ul.navbar-nav li a:hover { color: #f74e00; border: 0; }
+.navbar-inverse ul.navbar-nav li a:focus { color: #f74e00; outline: 0; border: 0; }
 
 .navbar-inverse ul.navbar-nav li a.btn-link-3 {
 	display: inline-block;
@@ -353,13 +354,14 @@ ul.navbar-nav { font-size: 15px; color: #fff; }
 	height: 200px;
 }
 .categories .features-box .holder{
-	background:  rgba(255,255,255,0.6);
+	background:  #ffc96e;
 	position: absolute;
 	width: 250px;
 	max-width: 100%;
 	height: 210px;
 	z-index: 10000;
 	top: 0px;
+	border-radius: 15px;
 	display: none;
 
 }
@@ -368,6 +370,36 @@ ul.navbar-nav { font-size: 15px; color: #fff; }
 	display: block;
 	font-size: 64px;
 	line-height: 200px;
+	text-align: center;
+	animation-name: fadeInUp;
+}
+
+
+.statistics-container img{
+	z-index: -1;
+}
+.statistics-container .img_class{
+	height: 100px;
+}
+.statistics-container .img_class .number{
+	background:  #ffc96e;
+	position: absolute;
+	width: 250px;
+	max-width: 100%;
+	height: 110px;
+	z-index: 10000;
+	top: 0px;
+	border-radius: 15px;
+	display: none;
+
+}
+
+.statistics-container .img_class:hover .number{
+	display: block;
+	cursor: pointer;
+	font-size: 3rem;
+	font-weight: 600;
+	line-height: 100px;
 	text-align: center;
 	animation-name: fadeInUp;
 }
@@ -409,7 +441,7 @@ ul.navbar-nav { font-size: 15px; color: #fff; }
 
 .how-it-works-container { padding-bottom: 30px;
 	background-repeat: no-repeat;
-	background-image: url(http://transleader.su/wp-content/uploads/2017/12/truck-2591007_960_720-768x512.jpg);
+	background-image: url(https://www.desktopbackground.org/download/2560x1440/2010/04/17/3405_cool-simple-white-backgrounds-picture-gallery_5120x2880_h.jpg);
 	background-position: center;
 	background-size: cover;
 }
@@ -565,6 +597,23 @@ ul.navbar-nav { font-size: 15px; color: #fff; }
 	padding-bottom: 80px;
 }
 
+.white-holder-9{
+	background: rgba(255,255,255,0.9);
+	width: 100%;
+	height: 100%;
+	display: block;
+	color: #333;
+	padding-bottom: 80px;
+}
+
+.white-holder-10{
+	background: rgba(255,255,255,1);
+	width: 100%;
+	height: 100%;
+	display: block;
+	color: #333;
+	padding-bottom: 80px;
+}
 .how-it-works-box {
 	padding-top: 15px; padding-bottom: 15px;
 	-o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
