--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -31,6 +31,7 @@
 	.navbar-inverse ul.navbar-nav li a.btn-link-3 { margin: 10px; }
 	.navbar-inverse ul.navbar-nav .dropdown-menu a { border: 0;display: block;  width: 100%; text-align: center}
 
+	.navbar-right li:first-child {display: none}
 	.section-description p { padding: 0; }
 
 	.top-content { padding: 40px 0 70px 0; }
