--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -24,7 +24,7 @@
 	}
 
 	.navbar { padding-top: 0; 	background:linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-		border-bottom:1px solid #deaa5c; }
+		border-bottom:1px solid #353532; }
 	.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand { margin-left: 15px; }
 	.navbar-collapse { border: 0; display: none!important;}
 	.navbar-inverse .navbar-toggle { border-color: transparent; }
@@ -72,12 +72,18 @@
 	}
 
 	.navbar { padding-top: 0; 	background:linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-		border-bottom:1px solid #deaa5c; }
+		border-bottom:1px solid #353532; }
 	.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand { margin-left: 15px; }
 	.navbar-collapse { border: 0; }
 	.navbar-inverse .navbar-toggle { border-color: transparent; }
 	.navbar-inverse ul.navbar-nav li a.btn-link-3 { margin: 10px; }
 	.navbar-inverse ul.navbar-nav .dropdown-menu a { border: 0;display: block;  width: 100%; text-align: center}
+
+	.navbar-right .btn{
+		display: block;
+		width: 100%;
+		margin: 10px 0 0 0px!important;
+	}
 	
 	.section-description p { padding: 0; }
 	
