--- a/public/js/media-queries.css
+++ b/public/js/media-queries.css
@@ -44,6 +44,10 @@
 	.footer-social i { font-size: 22px; }
 	.footer-menu li { margin-left: 15px; }
 
+	.nav.navbar-nav.navbar-left li:first-child{
+		display: none;
+	}
+
 }
 
 @media (max-width: 767px) {
