--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1012,7 +1012,7 @@ footer a:hover, footer a:focus { border-bottom: 1px dotted #b3853f; outline: 0; 
 	max-width: 320px;
 }
 
-.modal-login .modal-content{
+.modal-login .modal-content, .modal-register .modal-content{
 	background-color: #4c4c45!important;
 	color: #FFFFFF!important;
 }
@@ -1964,4 +1964,122 @@ footer a:hover, footer a:focus { border-bottom: 1px dotted #b3853f; outline: 0; 
 .datepicker-days table tbody
 {
 	font-size: 13px;
+}
+
+.birja-left{
+	padding: 0px 15px 0 0;
+	width: 235px;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.birja-right{
+	display: inline-block;
+	width: calc(100% - 280px);
+	padding: 0 15px 0 15px;
+}
+
+.banner img{
+	max-width: 250px;
+	height: 150px;
+}
+
+.birja-menu{
+	text-align: center;
+	width: 100%;
+	display: block;
+	background: #ff8300;
+}
+
+.birja-menu li{
+	list-style-type:none;
+	display: none;
+	border: 1px solid transparent;
+}
+
+.birja-menu li div{
+	display: none;
+}
+
+.birja-menu .fnp, .birja-menu .fnp ul{
+	display: inline;
+	padding: 0px;
+	margin: 0px;
+}
+
+.birja-menu .fnp ul:hover div{
+	color: #666;
+	background: white;
+	display: inline-block;
+	position: absolute;
+	margin-top: 15px;
+	width: 220px;
+	padding: 10px;
+	margin-left: -110px;
+	box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1001;
+}
+
+.birja-menu li.current{
+	display: inline-block;
+	color:white;
+	padding: 15px;
+	cursor: pointer;
+	width: 220px;
+	line-height: 16px;
+}
+
+@media(max-width: 1600px){
+	.birja-menu li.current{
+		font-size: 13px;
+		padding-left: 0px;
+		padding-right: 0px;
+		width: 160px;
+	}
+	.birja-menu .fnp ul:hover div{
+		width: 160px;
+		margin-left: -80px;
+	}
+}
+
+@media(max-width: 1200px){
+	.birja-menu li.current{
+		font-size: 13px;
+		width: auto;
+		padding: 10px;
+	}
+	.birja-menu .fnp ul:hover div{
+		width: 120px;
+		margin-left: -60px;
+	}
+}
+
+.birja-menu li.current:hover{
+	background: #ff8300;
+	background: -moz-linear-gradient(top, #ff8300 0%, #f74e00 100%);
+	background: -webkit-linear-gradient(top, #ff8300 0%,#f74e00 100%);
+	background: linear-gradient(to bottom, #ff8300 0%,#f74e00 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8300', endColorstr='#f74e00',GradientType=0 );
+	color: white;
+}
+
+.birja-menu li.current span{
+	display: block;
+	z-index: 1002;
+}
+
+.birja-menu .fnp div a{
+	display: block;
+	margin-top: 10px;
+	text-decoration: none;
+	text-align: left;
+	border: none;
+}
+
+.birja-menu .fnp div a:hover{
+	color:#ff8300!important;
+}
+
+.modal .modal-register {
+	max-width: 350px;
 }
